(lang dune 3.21)

(name p4)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "P4 <cs-26-sw-kbh-4-gr-6@student.aau.dk>")

(maintainers "P4 <cs-26-sw-kbh-4-gr-6@student.aau.dk>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name p4)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
